ScalaBlitz is now a dependency (removed and use dependency system)
BlitzView moved into the main project directory